This commit will fix a spacing error

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,8 @@
 
 #arsinoitherium-control:checked ~ .carousel-inner #arsinoitherium,
 #elasmotherium-control:checked ~ .carousel-inner #elasmotherium,
-#glyptodon-control:checked ~ .carousel-inner #glyptodon, #megatherium-control:checked ~ .carousel-inner #megatherium {
+#glyptodon-control:checked ~ .carousel-inner #glyptodon,
+#megatherium-control:checked ~ .carousel-inner #megatherium {
   display: block;
 }
 
